--- a/src/main/java/com/Jping/Qcozinhe/tests/add.html
+++ b/src/main/java/com/Jping/Qcozinhe/tests/add.html
@@ -2,10 +2,10 @@
 <html lang='pt-br'>
 <head>
     <meta charset='UTF-8'>
-    <title>adicionado</title>
+    <title>home</title>
 
 </head>
 <body>
-    <img src='data:image/jpeg;base64,'>
+
 </body>
 </html>
