--- a/src/main/java/com/Jping/Qcozinhe/tests/add.html
+++ b/src/main/java/com/Jping/Qcozinhe/tests/add.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html lang='pt-br'>
-<head>
-    <meta charset='UTF-8'>
-    <title>home</title>
-
-</head>
-<body>
-
-</body>
-</html>
+<img style="width: 100px;height: 100px;" src='data:image/jpeg;base64,"+leitura+"'>
